refactor: 패키지 구조 리팩터링 및 불필요한 클래스 제거